# slsim

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  AUTHORS.rst  CITATION.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  ONBOARDING.rst  ONBORDING.rst  README.md  README.rst  codecov.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.txt  test_requirements.txt  tox.ini
.github/: pull_request_template.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  sim_pipeline.Deflectors.rst  sim_pipeline.Observations.rst  sim_pipeline.ParamDistributions.rst  sim_pipeline.Pipelines.rst  sim_pipeline.Plots.rst  sim_pipeline.Sources.rst  sim_pipeline.Util.rst  sim_pipeline.rst  slsim.Deflectors.DeflectorPopulation.rst  slsim.Deflectors.DeflectorTypes.rst  slsim.Deflectors.MassLightConnection.rst  slsim.Deflectors.rst  slsim.FalsePositives.rst  slsim.Halos.rst  slsim.ImageSimulation.rst  slsim.LOS.rst  slsim.Lenses.rst  slsim.LsstSciencePipeline.rst  slsim.Microlensing.rst  slsim.Microlensing.source_morphology.rst  slsim.Observations.rst  slsim.ParamDistributions.rst  slsim.Pipelines.rst  slsim.Plots.rst  slsim.Sources.Events.Supernovae.rst  slsim.Sources.Events.rst  slsim.Sources.QuasarCatalog.rst  slsim.Sources.SourceCatalogues.QuasarCatalog.qsogen.rst  slsim.Sources.SourceCatalogues.QuasarCatalog.rst  slsim.Sources.SourceCatalogues.SupernovaeCatalog.rst  slsim.Sources.SourceCatalogues.rst  slsim.Sources.SourcePopulation.rst  slsim.Sources.SourceTypes.rst  (+8 more)
notebooks/: ccss.ipynb  (+58 more)
(+647 files in other folders)
