[metadata]
description-file = README.rst
# name = slsim
# author = DESC/SLSC
# author_email =
# description = A package for simulating strong lenses for LSST.
# long_description = file: README.rst
# long_description_content_type = text/x-rst
# license = MIT
# license_file = LICENSE.rst
# url = https://github.com/LSST-strong-lensing/slsim
# edit_on_github = True
# github_project = LSST-strong-lensing/slsim

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy
    scipy
    pyyaml



[coverage:run]
omit =
    */slsim/tests/*


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    except ModuleNotFoundError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
max-line-length = 100